# RustEMS

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: simulator_integration_test.rs
client/: Cargo.toml
client/src/: client.rs  error.rs  image.rs  lib.rs  rdp.rs
codegen/: Cargo.toml  hardware-compatibles.md
codegen/src/: generator.rs  lib.rs  main.rs  model.rs  parser.rs  registry.rs
codegen/tests/: integration_test.rs
device-api/: Cargo.toml
device-api/src/: cbor.rs  cobs.rs  crc16.rs  defrag.rs  frame.rs  lib.rs  message.rs
docs/: feature-coverage-report.md  feature-coverage-todo.md  hardware-coverage-report.md
docs/api/: 01-requirements.md  02-transport-and-framing.md  03-message-protocol.md  04-parameter-model.md  05-telemetry-control-diagnostics.md  README.md
engine-core/: Cargo.toml
engine-core/src/: bootloader.rs  config.rs  hal.rs  lib.rs  params.rs  shutdown.rs  start_stop.rs  storage.rs  tcu.rs  traction.rs
engine-core/src/actuators/: boost.rs  etb.rs  idle.rs  mod.rs  pwm.rs  vvt.rs
engine-core/src/can/: dash.rs  mod.rs  obd2.rs
engine-core/src/comms/: control.rs  faults.rs  mod.rs  output.rs  rdp.rs  telemetry.rs
engine-core/src/engine_cycle/: mod.rs
engine-core/src/fuel/: ltft.rs  mod.rs  wall_wetting.rs
engine-core/src/ignition/: mod.rs
engine-core/src/knock/: mod.rs
engine-core/src/maps/: interpolation.rs  mod.rs
engine-core/src/outputs/: mod.rs
engine-core/src/protection/: mod.rs
engine-core/src/sensors/: heater.rs  mod.rs
engine-core/src/trigger/: missing_tooth.rs  mod.rs
hal-huge/: Cargo.toml
hal-huge/src/: adc.rs  can.rs  ignition.rs  injector.rs  lib.rs  timer.rs  trigger.rs
hal-microrusefi/: Cargo.toml
hal-microrusefi/src/: adc.rs  can.rs  ignition.rs  injector.rs  lib.rs  timer.rs  trigger.rs
hal-nano/: Cargo.toml
hal-nano/src/: adc.rs  can.rs  ignition.rs  injector.rs  lib.rs  timer.rs  trigger.rs  uart.rs
hal-proteus/: Cargo.toml
hal-proteus/src/: adc.rs  can.rs  ignition.rs  injector.rs  lib.rs  timer.rs  trigger.rs  uart.rs
hal-sim/: Cargo.toml
hal-sim/src/: adc_sim.rs  can_sim.rs  ignition_sim.rs  injector_sim.rs  lib.rs  pwm_sim.rs  timer_sim.rs  trigger_sim.rs  uart_sim.rs
hal-stm32-common/: Cargo.toml
hal-stm32-common/src/: board.rs  lib.rs
hal-stm32-common/src/driver/: adc.rs  can.rs  ignition.rs  injector.rs  mod.rs  timer.rs  trigger.rs  uart.rs
hal-uaefi/: Cargo.toml
hal-uaefi/src/: adc.rs  can.rs  ignition.rs  injector.rs  lib.rs  timer.rs  trigger.rs
protocol/: Cargo.toml
protocol/src/: io.rs  lib.rs  opcode.rs  packet.rs
protocol/src/transport/: mod.rs  serial.rs  tcp.rs
sim/: Cargo.toml
sim/src/: main.rs  serve.rs
sim/tests/: integration.rs  regression_test.rs
stm32/: Cargo.toml  build.rs  memory.x
stm32/.cargo/: config.toml
stm32/src/: main.rs
tunerstudio/: README.md  rustems.ini
