[workspace]
members = [
    "engine-core",
    "cli",
    "client",
    "codegen",
    "protocol",
    "device-api",
    "sim",
    "hal-sim",
    "hal-stm32-common",
    "hal-microrusefi",
    "hal-proteus",
    "hal-nano",
    "hal-uaefi",
    "hal-huge",
    "stm32",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rusEFI Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusefi/rusefi"
rust-version = "1.95"

[workspace.dependencies]
nom = "8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
minijinja = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
crc32fast = "1"
bytes = "1"
tokio = { version = "1", features = ["io-util", "net", "time", "rt", "macros"] }
cortex-m = { version = "0.7.7", default-features = false }
embassy-stm32 = { version = "0.6" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
