[package]
name = "rusefi-client"
description = "High-level rusEFI ECU client (read/write configuration, output channels)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rusefi-protocol = { path = "../protocol" }
rusefi-device-api = { path = "../device-api" }
heapless = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util", "time"] }
rusefi-core = { path = "../engine-core", features = ["cyl-4", "fuel-fi"] }
